Add simple initial example and parser for it

--- a/lib/dune
+++ b/lib/dune
@@ -1,2 +1,8 @@
 (library
- (name trout))
+ (name tokenizer)
+ (modules tokenizer))
+
+(library
+ (name parser)
+ (modules parser)
+ (libraries tokenizer))
