Add interpreter and escaping for newline

--- a/lib/dune
+++ b/lib/dune
@@ -6,3 +6,8 @@
  (name parser)
  (modules parser)
  (libraries tokenizer))
+
+(library
+ (name interpreter)
+ (modules interpreter)
+ (libraries parser))
